--- a/TODO
+++ b/TODO
@@ -1,14 +1,14 @@
 1.  Binary Search Tree
-2.  MaxHeap
+2.  MaxHeap done
 3.  prefix-tree
 4.  suffix-tree
 5.  binary search
-6.  LinkedList
-7.  LinkedList queue
-8.  LinkedList stack
+6.  LinkedList done
 9.  skipList
 10. hashtable
 11. minin sparing tree
 12. prime and kruskal 
 13. segment tree
 14. union-find sets
+15. bloom filter
+16. Dictory
